new flanker (w/ new stimuli) and new welcome script

--- a/NbackLetters/files/NbackFr.html
+++ b/NbackLetters/files/NbackFr.html
@@ -4,7 +4,7 @@
 <p>
 </br>Maintenant, vous allez voir une lettre à la fois s'afficher au centre de l'écran.
 </br>Vous devez décider si cette lettre est exactement la même lettre que vous avez vu 2 lettres avant.
-</br>Si la lettre que vous voyez est la même que la lettre que vous avez vue 2 lettres avant, appuyez sur la BARRE d'ESPACE le plus rapidement possible.
+</br>Si la lettre est la même, appuyez sur la BARRE d'ESPACE le plus rapidement possible.
 </br>Si la lettre n'est pas la même, ne faites rien.</br>
 </br>Par exemple, ici, il faudrait appuyer sur la BARRE D’ESPACE quand le deuxième ‘m’ apparaît.
 </br>
