TOL integrated. details in extended description
TOL has been integrated. making changes in WS-TOL.exp. highlighted in
revised script.doc.
welcomescript2.0.exp exists for melissa just in case I don't finish
tonight

--- a/TowerofLondon/practice.html
+++ b/TowerofLondon/practice.html
@@ -26,14 +26,11 @@ new pattern in a special number of moves.</big></li>
 </ul>
 
 <big style="font-family: Verdana;">The allowed number of moves for each
-pattern will be displayed in the upper right corner of the screen. To
+pattern will be displayed in the upper right corner of the screen. After 5 extra moves, the task will stop.   To
 pick up one of the balls, click on it with the mouse. Move the ball to
 a peg with at least one free spot on it and click again to release it.<br>
 <br>
-If you make a mistake, you can press the 'Reset' button to put the
-balls back to the starting pattern and try again. You have
-<%values.maxattempts%>&nbsp;attempts to solve each problem in the
-number of prescribed moves.<br>
+<br>
 <br>
 If you feel that you cannot solve one of the problems, you can press
 the 'Next' button to move on to the next pattern.<br>
