stable TOL without reset and modified html pages

--- a/TowerofLondon/practiceEng.html
+++ b/TowerofLondon/practiceEng.html
@@ -26,16 +26,15 @@ new pattern in a special number of moves.</big></li>
 </ul>
 
 <big style="font-family: Verdana;">The allowed number of moves for each
-pattern will be displayed in the upper right corner of the screen. After 5 extra moves, the task will stop.   To
-pick up one of the balls, click on it with the mouse. Move the ball to
+pattern will be displayed in the upper right corner of the screen. After one extra move, the task will reset and you will get one other try. 
+ <br>
+ To pick up one of the balls, click on it with the mouse. Move the ball to
 a peg with at least one free spot on it and click again to release it.<br>
 <br>
 <br>
 <br>
-If you feel that you cannot solve one of the problems, you can press
-the 'Next' button to move on to the next pattern.<br>
 <br>
-Click the 'Next &gt;&gt;' button to try a practice problem.</big><br>
+Click the "Continue" button to try a <b>practice problem.</b></big><br>
 
 <br>
 </body></html>
