--- a/TowerofLondon/practiceFr.html
+++ b/TowerofLondon/practiceFr.html
@@ -19,12 +19,12 @@
   <li><big style="font-family: Verdana;">Finalement, vous devez faire le nouveau modèle avec un nombre précis de déplacements.</big></li>
 </ul>
 
-<big style="font-family: Verdana;">Le nombre de déplacements permis pour chaque modèle sera inscrit en haut à  droite de l'écran.  Après 5 déplacements supplémentaires, la tâche s'arrête. 
+<big style="font-family: Verdana;">Le nombre de déplacements permis pour chaque modèle sera inscrit en haut à  droite de l'écran.  Après un déplacement supplémentaire, la tâche va se remettre au modèle de départ et vous allez avoir un autre essai. 
 <br>
 Pour déplacer une balle, cliquez dessus avec la souris.  Déplacez la balle sur une tige ayant au moins un espace libre, et cliquez encore pour la relâcher.<br>
 <br>
 <br>
-Si vous pensez qu'il y a un problème que vous n'arrivez pas à  résoudre, vous pouvez cliquer sur ''prochain'' pour passer au modèle suivant.<br>
+Cliquer sur le bouton "Continue" pour essayer un <b>problème pratique</b>
 <br>
 <br>
 </body></html>
