--- a/TowerofLondon/testEng.html
+++ b/TowerofLondon/testEng.html
@@ -25,7 +25,7 @@ new pattern in a special number of moves.</big></li>
 </ul>
 
 <big style="font-family: Verdana;">
-Click the 'Next &gt;&gt;' button to start the test phase.</big><br>
+Click the "Continue" button to start the test phase.</big><br>
 
 <br>
 
