--- a/TowerofLondon/testFr.html
+++ b/TowerofLondon/testFr.html
@@ -21,7 +21,7 @@
 </ul>
 
 <big style="font-family: Verdana;">
-Click the 'prochain' pour commencer le test.</big><br>
+Click the "Continue" pour commencer le test.</big><br>
 
 <br>
 
