--- a/TowerofLondon/practiceEng.html
+++ b/TowerofLondon/practiceEng.html
@@ -26,7 +26,7 @@ new pattern in a special number of moves.</big></li>
 </ul>
 
 <big style="font-family: Verdana;">The allowed number of moves for each
-pattern will be displayed in the upper right corner of the screen. After one extra move, the task will reset and you will get one other try. 
+pattern will be displayed in the upper right corner of the screen. If you preform too many moves, the task will reset and you will get one other try. 
  <br>
  To pick up one of the balls, click on it with the mouse. Move the ball to
 a peg with at least one free spot on it and click again to release it.<br>
