--- a/TowerofLondon/practiceFr.html
+++ b/TowerofLondon/practiceFr.html
@@ -19,7 +19,7 @@
   <li><big style="font-family: Verdana;">Finalement, vous devez faire le nouveau modèle avec un nombre précis de déplacements.</big></li>
 </ul>
 
-<big style="font-family: Verdana;">Le nombre de déplacements permis pour chaque modèle sera inscrit en haut à  droite de l'écran.  Après un déplacement supplémentaire, la tâche va se remettre au modèle de départ et vous allez avoir un autre essai. 
+<big style="font-family: Verdana;">Le nombre de déplacements permis pour chaque modèle sera inscrit en haut à  droite de l'écran.  Si vous faites trop de déplacements, la tâche va se remettre au modèle de départ et vous allez avoir un autre essai. 
 <br>
 Pour déplacer une balle, cliquez dessus avec la souris.  Déplacez la balle sur une tige ayant au moins un espace libre, et cliquez encore pour la relâcher.<br>
 <br>
